# shell-gpt-vertex-ai

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: pre-publish.yml  publish.yml  test.yml
dev/: main.py  test.py
docs/: cleanup.md  config-setup  dev-notes.md  multi-shot.md  prompt-engineering.md
tests/: test_cli.py
vgpt/: __init__.py  app.py  cache.py  config.py  gcp.py  log.py  main.py  roles.py  version.py
